--- a/src/app/team-value/team-value.component.css
+++ b/src/app/team-value/team-value.component.css
@@ -110,6 +110,8 @@
 }
 
 .container-img i {
+    font-family: 'FontAwesome' !important;
+    font-style: normal;
     font-size: 28px;
     color: #ff7a59;
     transition: all 0.4s ease;
